banner spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,99 +1,69 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 body {
   font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-}
-.fullbanner {
-  background-color: #f0fff0;
-  padding: 24px 0px;
-  gap: 34px;
-  height: 524px;
+  /* font-family: "Roboto", sans-serif; */
 }
 header {
-  width: 100%;
-}
-.container {
-  width: 1140px;
-  height: auto;
-  position: relative;
-  margin-bottom: 34px;
-}
-.main-logo {
-  width: 198.07px;
-}
-.navbar {
-  /* background-color: #f0fff0; */
-  padding-bottom: 10px;
-}
-/* .navbar-nav {
-  gap: 25px;
-} */
-.courses {
-  margin-left: 52px;
-}
-.others {
-  margin-left: 30px;
-}
-.blog {
-  margin-left: 36px;
-}
-.button1 {
-  padding: 12px 28px 12px 28px;
-  gap: 10px;
-  margin-left: 20px;
-  border-radius: 33px;
-  opacity: 0px;
-  background: #21b573;
-  color: #ffffff;
-  text-decoration: none;
-}
-.banner-section {
   background-color: #f0fff0;
 }
-.right {
-  text-align: left;
-  padding-top: 50px;
+
+header .navbar .nav-item {
+  margin-left: 35px;
+}
+header .navbar .nav-item .signin {
+  background: #21b573;
+  color: white;
+  padding: 10px 28px;
+  border-radius: 33px;
+  opacity: 0px;
+}
+header .navbar .nav-link {
+  color: black;
+}
+.banner-section {
+  width: 100%;
+  background: #f0fff0;
+  padding: 0px 0px 60px;
+}
+.banner-section .content {
+  margin-top: 105px;
 }
 
-h1 {
+.banner-section .content h6 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #fd511a;
+}
+
+.banner-section .content h1 {
+  width: 66%;
+  font-family: Poppins;
   font-size: 48px;
   font-weight: 700;
   line-height: 70px;
   text-align: left;
+  margin-bottom: 20px;
 }
-span {
+.banner-section .content h1 span {
   color: #21b573;
 }
-.question {
-  color: #fd511a;
+.banner-section .content p {
   font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  text-align: left;
-}
-.dis {
-  font-size: 16px;
-  font-weight: 700;
+  font-weight: 400;
   line-height: 36px;
   text-align: left;
+  width: 63%;
 }
-.button2 {
-  padding: 12px 36px 12px 36px;
-  display: inline-block;
-  margin: 15px 0px 55px 0px;
-  gap: 10px;
+.get-started {
+  margin-top: 25px;
+}
+.get-started .btn-info {
+  background: #21b573;
+  color: white;
+  padding: 10px 36px;
   border-radius: 33px;
   opacity: 0px;
-  background: #21b573;
-  color: #ffffff;
-  text-decoration: none;
   border: 1px solid black;
-  box-shadow: 0px 4px 4px 0px #00000040;
-}
-.left {
-  margin-bottom: 42px;
 }
